syntax = "proto3";

package protos;

import "tx.proto";

// The definition of Block
message Block {
    // Header of Block
    BlockHeader Header = 1;
    // Transactions of Block
    repeated Tx Transactions = 2;
}

// The definition of BlockHeader
message BlockHeader {
    int32 Version = 1;
    string ChannelID = 2;
    uint64 Number = 3;
    // The hash of PrevBlock
    bytes PrevBlock = 4;
    bytes MerkleRoot = 5;
    int64 Time = 6;
}
